Completed user-friendly constructors for Lattice object. Added user-friendly constructors for Symmetry object. Fixed a bug in .translate_SG function.

--- a/cry-dev/cRy/NAMESPACE
+++ b/cry-dev/cRy/NAMESPACE
@@ -1,6 +1,6 @@
 exportClasses("Angle","UnitCell","ReciprocalUnitCell","BravaisType","Lattice","Symmetry")
 
-exportMethods("angle","unitcell","reciprocalunitcell","bravaistype","lattice")
+exportMethods("angle","unitcell","reciprocalunitcell","bravaistype","lattice","symmetry")
 exportMethods("[","print","show","getFields","getParameters","getData")
 
 ## To be deleted after package completion
